# cb-cid

./: .dvcignore  .gitignore  DEPLOYMENT_GUIDE.md  README.md  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  plan.yml  terraform.yml
data_quality_graphs/: fir_quality_report.json
datasets/: test.txt.dvc
extraction_evaluation_results/: llm_extraction_evaluation.csv  llm_extraction_evaluation.json
infra/: backend.tf  main.tf  startup-script.sh  terraform.tfvars  variables.tf
infra/.terraform/modules/: modules.json
llm_extracted_outputs/: DeepSeek-R1-Distill-Llama-8B_output.txt  Llama-3.1-8B-Instruct_output.txt  MiniMax-M2_output.txt  Qwen2.5-7B-Instruct.txt  Qwen2.5-7B-Instruct_output.txt  gpt-oss-20b_output.txt  llama_3.1_8b_instruct_output.txt
llm_input_data/: ocr_parsed_text_Cr.No.01-2017.txt  truth_data_Cr.No.01-2017.txt
notebooks/: FIR_data_quality_analysis.ipynb  MiniMax-M2.ipynb  deepseek-r1-distill-llama-8b.ipynb  evaluation.ipynb  evaluation_1.ipynb  extraction_evaluation.ipynb  fir_data_exploration.ipynb  fir_truth_dataset_generate_set2.ipynb  gpt-oss-20b.ipynb  llama_3.1_8b_instruct.ipynb  llm_extraction.ipynb  parsing.ipynb  parsing_1.ipynb  parsing_evaluation.ipynb  pdf_parsing.ipynb  qwen2.5-7b-instruct.ipynb
terraform/: README.md  outputs.tf
terraform/modules/gpu-vm/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
