[project]
name = "ocr-tamil-local"
version = "0.1.0"
description = "Offline Tamil + English OCR"

requires-python = ">=3.9,<3.12"

dependencies = [
    "torch==2.0.1",
    "pytorch-lightning==1.9.5",
    "torchvision==0.15.2",
    "torchmetrics>=0.11.0,<0.13.0",
    "ocr_tamil>=0.2.0,<0.5.0",
    "numpy>=1.22.0,<1.25.0",
    "PyMuPDF>=1.23.0,<1.25.0"
]




