[project]
name = "ocr-tamil-local"
version = "0.1.0"
description = "Offline Tamil + English OCR"

requires-python = "==3.10.19"

dependencies = [
    "pytorch-lightning==1.9.5",
    "torchvision==0.15.2",
    "torchmetrics>=0.11.0,<0.13.0",
    "ocr_tamil==0.3.3",
    "numpy>=1.22.0,<1.25.0",
    "PyMuPDF>=1.23.0,<1.25.0",
    "pandas>=2.0.0,<2.3.0",
    "matplotlib>=3.6.0,<3.9.0",
    "seaborn>=0.12.0,<0.14.0",
    "tqdm>=4.60.0,<4.70.0",
    "torch==2.0.1",
    "opencv-python>=4.11.0.86",
    "ipykernel>=6.31.0",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.0.0",
    "huggingface_hub>=0.15.0,<0.17.0",  
    "timm>=1.0.0",  # For ocr_tamil (includes monkey patch in pdf_parsing.ipynb)
    "dvc[gs]>=3.64.2",
    "tokenizers>=0.13.0,<0.14.0",  
    "transformers==4.30.0", 
    "sentence-transformers==2.2.2", 
    "rouge-score>=0.1.2", 
]





